--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 name = Harun default
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mysql
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
